Solve day 1